# AigisToys

./: .gitignore
.github/workflows/: release  release.yml
aigis-crab/: Cargo.toml
aigis-crab/aikipedia/: Cargo.toml
aigis-crab/aikipedia/src/: card.rs  lib.rs  map.rs  mission_quest.rs  quest_list.rs  quest_result.rs
aigis-crab/scavenger/: Cargo.toml
aigis-crab/treasure-counter/: Cargo.toml
aigis-crab/treasure-counter/src/: data_repo.rs  lib.rs
treasure-counter/: .gitignore  background.config.ts  package-lock.json  package.json  plugin.d.ts  plugin.manifest.json  popup.config.ts  tsconfig.json  webpack.config.ts
treasure-counter/background/: index.ts
treasure-counter/popup/: App.tsx  FatalError.tsx  Help.tsx  TreasureItems.tsx  help.tsx  history.tsx  index.tsx  perloadImages.ts  playerInterface.ts  playerInterface.tsx
treasure-counter/popup/public/: index.html
