[package]
name = "aikipedia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["console"] }
serde.workspace = true
serde-wasm-bindgen.workspace = true
itertools.workspace = true
